@@ -52,9 +52,9 @@ public class ReportsProviderFactory {
     protected Object createObject(String className) throws LIMSRuntimeException {
         Object object = null;
         try {
-            Class classDefinition = Class.forName(className);
-            object = classDefinition.newInstance();
-        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+            Class<?> classDefinition = Class.forName(className);
+            object = classDefinition.getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException e) {
             // bugzilla 2154
             LogEvent.logError(e);
             throw new LIMSRuntimeException("Unable to create an object for " + className, e);
